# IR-Project

./: README.md  pyproject.toml
src/: data_loader.py  evaluation.py  indexer.py  main.py  models.py  search.py  seo.py
src/rag/: gemini_client.py  openai_agent_client.py  rag_pipeline.py
src/semantic/: encoder.py  semantic_search.py  similarity.py  timeline.py  vector_store.py
ui/: index.html
