[project]
name = "ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "duckdb>=1.4.2",
    "fastapi[standard]>=0.121.2",
    "google-genai>=1.52.0",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.38.0",
]
